# pygfx_proto

./: README.md  pyproject.toml  ruff.toml
code/: template_anim_mixer.py  template_basic.py  template_dynlines.py  template_dynpoints.py  template_gltf.py  template_imgui.py  template_input.py  template_visdebug.py  template_zup.py
code/lib/: UseGfxDisplay.py  UseImgui.py  UseVisDebug.py  Util.py
code/lib/maths/: Quat.py  Transform.py  Vec3.py
code/lib/models/: DynamicPoints.py
maths/: Easing.py  Gradient.py  Lerp.py  Maths.py  Quat.py  Transform.py  Vec3.py  __init__.py  types.py
pgfx/: DynamicLines.py  DynamicPoints.py  FacedCube.py  UseGfxDisplay.py  UseGizmo.py  UseVisDebug.py  Util.py  zz_template_anim_mixer.py  zz_template_basic.py  zz_template_drag_points.py  zz_template_dynlines.py  zz_template_dynpoints.py  zz_template_gizmo.py  zz_template_gizmo_custom.py  zz_template_gltf.py  zz_template_imgui.py  zz_template_input.py  zz_template_picking.py  zz_template_visdebug.py  zz_template_zup.py
proto/: _debug_info.py  _fix_import.py  _pgfx.py
res/: kaykit_animations.glb  kaykit_mannequin.glb  nabba.glb
