[project]
name = "pygfx-proto"
version = "0.1.0"
description = "3D Prototying in Python & WebGPU"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
[project.optional-dependencies]
dev = [
    "glfw>=2.9.0",
    "gltflib>=1.0.13",
    "imageio>=2.37.0",
    "imgui-bundle>=1.6.2",
    "pygfx>=0.9.0",
    "pygltflib>=1.16.4",
]

[dependency-groups]
dev = [
    "pygfx-proto",
]

[tool.uv.sources]
pygfx-proto = { workspace = true }

[tool.setuptools]
packages = ["pgfx", "maths", "proto"]